--- a/Blazor/Components/Pages/Counter.razor
+++ b/Blazor/Components/Pages/Counter.razor
@@ -12,6 +12,9 @@
 @code {
     private int currentCount = 0;
 
+    /// <summary>
+    /// 
+    /// </summary>
     private void IncrementCount()
     {
         currentCount++;
